--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
           <img src="img/slide3.jpeg" alt="">
       </div>
 
+      <div class="titleMessage">
+        <div class="heading">
+          <p class="main">TRISTAN DE MEZIERES</p>
+          <p class="sub typed"></p>
+        </div> 
+      </div>
+
       <nav class="slides-navigation">
           <a href="#" class="next"></a>
           <a href="#" class="prev"></a>
@@ -30,11 +37,10 @@
     </div>
 
 <script src="js/jquery.superslides.min.js"></script>
+<script src="js/typed.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>  
 
 <script src="js/script.js"></script>
 </body>
 </html>
-
-abc TEST
