commit about me section

--- a/index.html
+++ b/index.html
@@ -34,7 +34,25 @@
           <a href="#" class="prev"></a>
       </nav>
 
+    
+    
     </div>
+
+  <div id="about" class="section">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-5">  
+              <img class="aboutImage" src="img/about.jpg">
+          </div>
+          <div class="col-md-7">
+            <h4>My name is Tristan de Mezieres</h4>
+
+            <p>Bacon ipsum dolor amet chuck boudin short ribs jowl, flank meatloaf turkey prosciutto frankfurter chicken bresaola spare ribs ham hock rump doner. Andouille t-bone shank shankle chicken, burgdoggen kevin chuck filet mignon salami cupim venison pork belly. Prosciutto shank buffalo landjaeger doner swine t-bone. Pancetta kevin meatball turducken frankfurter leberkas pork chop short loin porchetta ground round.</p>
+            <p>Biltong venison alcatra bacon tri-tip jowl kielbasa cupim fatback, prosciutto turducken ham boudin. Turkey andouille brisket tail flank short loin ground round strip steak beef buffalo tongue pork porchetta shankle. Buffalo doner beef ribs picanha bresaola alcatra cupim tri-tip burgdoggen strip steak hamburger ground round pork loin kielbasa flank.</p>
+          </div>
+        </div>
+    </div>
+  </div>
 
 <script src="js/jquery.superslides.min.js"></script>
 <script src="js/typed.min.js"></script>
