Technical Skills Section

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>Portfolio | Tristan de Mezieres</title>
 
   <link rel="stylesheet" href="css/superslides.css">
+  <link rel="stylesheet" href="css/owl.carousel.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
   <link rel="stylesheet" href="css/style.css">
@@ -11,6 +12,8 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
+
+<!-- Slides -->
 
     <div id="slides">
 
@@ -38,6 +41,8 @@
     
     </div>
 
+<!-- About Me -->
+
   <div id="about" class="section">
       <div class="container">
         <div class="row">
@@ -54,11 +59,79 @@
     </div>
   </div>
 
-<script src="js/jquery.superslides.min.js"></script>
-<script src="js/typed.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>  
+<!-- Technical Skills -->
 
-<script src="js/script.js"></script>
+  <div id="skills" class="skillsSection section">
+    <div class="container">
+      <div class="row">
+          <div class="col-md-12 text-center">
+              <h2>TECHNICAL SKILLS</h2>
+              <p>A representation of my proficiency in each skill</p>
+          </div>
+          <div class="owl-carousel owl-theme">
+              <div class="skill">
+                  <span class="chart" data-percent="20">
+                        <span class="percent">25</span>
+                        <canvas height="152" width="152"></canvas>
+                  </span>
+                  <h4>Javascript</h4>
+                  <p>Used in some of my web based projects</p>
+              </div>
+
+                <div class="skill">
+                    <span class="chart" data-percent="90">
+                          <span class="percent">90</span>
+                          <canvas height="152" width="152"></canvas>
+                    </span>
+                    <h4>HTML</h4>
+                    <p>Used in all of my web based projects</p>
+                </div>
+
+                  <div class="skill">
+                      <span class="chart" data-percent="46">
+                            <span class="percent">46</span>
+                            <canvas height="152" width="152"></canvas>
+                      </span>
+                      <h4>CSS</h4>
+                      <p>Used in most of my web based projects</p>
+                  </div>
+
+                  <div class="skill">
+                    <span class="chart" data-percent="51">
+                          <span class="percent">51</span>
+                          <canvas height="152" width="152"></canvas>
+                    </span>
+                    <h4>SQL Server</h4>
+                    <p>Used in most of my web based projects</p>
+                </div>
+
+                <div class="skill">
+                  <span class="chart" data-percent="46">
+                        <span class="percent">46</span>
+                        <canvas height="152" width="152"></canvas>
+                  </span>
+                  <h4>Bootstrap</h4>
+                  <p>Used in most of my web based projects</p>
+              </div>
+              
+        </div>
+      </div>
+  </div>
+</div>
+
+
+
+
+
+
+
+  <script src="js/jquery.superslides.min.js"></script>
+  <script src="js/jquery.easypiechart.js"></script>
+  <script src="js/owl.carousel.min.js"></script>
+  <script src="js/typed.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>  
+
+  <script src="js/script.js"></script>
 </body>
 </html>
