--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="css/superslides.css">
   <link rel="stylesheet" href="css/owl.carousel.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
 
   <link rel="stylesheet" href="css/style.css">
 
@@ -119,13 +120,74 @@
   </div>
 </div>
 
+<!-- Stats -->
+  <div id="stats" class="statsSection section">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-3 col-sm-6">
+            <div class="squareItem">
+              <div class="squareInnerContainer">
+                <div class="squareIcon">
+                    <i class="fa fa-clock"></i>
+                </div>
+                <div class="squareContent">
+                    <h2 class="counter">1</h2>
+                    <h3>Years Experience</h3>
+                </div>
+              </div>
+            </div>
+        </div> 
+        <div class="col-md-3 col-sm-6">
+          <div class="squareItem">
+            <div class="squareInnerContainer">
+              <div class="squareIcon">
+                  <i class="fa fa-briefcase"></i>
+              </div>
+              <div class="squareContent">
+                  <h2 class="counter">0</h2>
+                  <h3>Clients</h3>
+              </div>
+            </div>
+          </div>
+      </div> 
+      <div class="col-md-3 col-sm-6">
+        <div class="squareItem">
+          <div class="squareInnerContainer">
+            <div class="squareIcon">
+                <i class="fa fa-cloud"></i>
+            </div>
+            <div class="squareContent">
+                <h2 class="counter">1</h2>
+                <h3>Websites Made</h3>
+            </div>
+          </div>
+        </div>
+    </div> 
+    <div class="col-md-3 col-sm-6">
+      <div class="squareItem">
+        <div class="squareInnerContainer">
+          <div class="squareIcon">
+              <i class="fa fa-bolt"></i>
+          </div>
+          <div class="squareContent">
+              <h2 class="counter">2</h2>
+              <h3>Web Apps</h3>
+          </div>
+        </div>
+      </div>
+  </div> 
 
+      </div>
+    </div>
+  </div>
 
 
 
 
 
   <script src="js/jquery.superslides.min.js"></script>
+  <script src="js/countUp.js"></script>
+  <script src="js/countUp-jquery.js"></script>
   <script src="js/jquery.easypiechart.js"></script>
   <script src="js/owl.carousel.min.js"></script>
   <script src="js/typed.min.js"></script>
