--- a/index.html
+++ b/index.html
@@ -181,7 +181,19 @@
     </div>
   </div>
 
+<!-- Contact -->
 
+<div id="contact" class="contactSection section">
+    <div class="col-md-12 text-center">
+        <p class="subHeading">Like what you see?</p>
+        <h2>I'd love to hear from you!</h2>
+        <a href="mailTo:tpdemez@gmail.com" class="contactButton">GET IN TOUCH!</a>
+    </div>
+</div>
+
+<div id="contact" class="contactSection section">
+
+</div>
 
 
 
