--- a/index.html
+++ b/index.html
@@ -194,6 +194,8 @@
     </div>
 </div>
 
+<!-- Portfolio -->
+
 <div id="portfolio" class="section">
   <div class="container">
     <div class="row">
@@ -344,9 +346,15 @@
   </div>
 </div>
 
+<!-- Copyright -->
 
+<div class="copyrightSection">
 
+    <div class="col-md-12 text-center">
+        <p>&copy; Copyright Tristan de Mezieres 2021</p>
+    </div>
 
+</div>
 
 
 
