--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <title>Portfolio | Tristan de Mezieres</title>
 
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <link rel="stylesheet" href="css/superslides.css">
   <link rel="stylesheet" href="css/owl.carousel.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
-
-
 
   <link rel="stylesheet" href="css/style.css">
 
@@ -17,7 +17,13 @@
 </head>
 <body>
 
-<!-- Slides & Navigation -->
+<!-- Loader -->
+
+    <div class="loader">
+        <div class="inner"></div>
+    </div>
+
+<!-- Slides -->
 
     <div id="slides">
 
@@ -45,6 +51,8 @@
     
     </div>
 
+<!-- Navigation -->
+
     <nav id="navigation" class="navbar navbar-expand-lg">
         <a class="navbar-brand" href="#">Tristan de Mezieres</a>
 
@@ -64,26 +72,15 @@
               <a class="nav-link" href="#stats">Stats</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#portfolio">Portfolio</a>
+              <a class="nav-link" href="#contact">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#contact">Contact</a>
+              <a class="nav-link" href="#portfolio">Portfolio</a>
             </li>
           </ul>
         </div>
-      
 
     </nav>
-
-
-
-
-
-
-
-
-
-
 
 <!-- About Me -->
 
@@ -395,12 +392,6 @@
     </div>
 
 </div>
-
-
-
-
-
-
 
 </div>
 
