changes to place holder text

--- a/index.html
+++ b/index.html
@@ -91,14 +91,16 @@
               <img class="aboutImage" src="img/about.jpg">
           </div>
           <div class="col-md-7">
-            <h4>My name is Tristan de Mezieres</h4>
+            <h4>Hey, I'm Tristan de Mezieres</h4>
 
-            <p>Bacon ipsum dolor amet chuck boudin short ribs jowl, flank meatloaf turkey prosciutto frankfurter chicken bresaola spare ribs ham hock rump doner. Andouille t-bone shank shankle chicken, burgdoggen kevin chuck filet mignon salami cupim venison pork belly. Prosciutto shank buffalo landjaeger doner swine t-bone. Pancetta kevin meatball turducken frankfurter leberkas pork chop short loin porchetta ground round.</p>
-            <p>Biltong venison alcatra bacon tri-tip jowl kielbasa cupim fatback, prosciutto turducken ham boudin. Turkey andouille brisket tail flank short loin ground round strip steak beef buffalo tongue pork porchetta shankle. Buffalo doner beef ribs picanha bresaola alcatra cupim tri-tip burgdoggen strip steak hamburger ground round pork loin kielbasa flank.</p>
+            <p>I'm an aspiring Web Developer from Brisbane, Australia. I currently work as an Application Support Analyst at TechnologyOne. In my spare time I focus on writing accessable HTML, using modern CSS practices and writing clean JavaScript. When wirting JavaScript code, I mostly use React, but can adapt to whatever tools are required.</p>
+            <p>I enjoy web development because it allows me to be creative, solve real problems and continuously learn and grow.</p>
           </div>
         </div>
     </div>
   </div>
+
+  <!-- Text needs to be wrapped -->
 
 <!-- Technical Skills -->
 
@@ -225,9 +227,9 @@
 
 <div id="contact" class="contactSection section">
     <div class="col-md-12 text-center">
-        <p class="subHeading">Like what you see?</p>
+        <p class="subHeading">Interested in doing a project together?</p>
         <h2>I'd love to hear from you!</h2>
-        <a href="mailTo:tpdemez@gmail.com" class="contactButton">GET IN TOUCH!</a>
+        <a href="mailTo:tpdemez@gmail.com" class="contactButton">CONTACT ME</a>
     </div>
 </div>
 
@@ -390,8 +392,6 @@
     <div class="col-md-12 text-center">
         <p>&copy; Copyright Tristan de Mezieres 2021</p>
     </div>
-
-</div>
 
 </div>
 
