Changed Colour Scheme

--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
-
   <link rel="stylesheet" href="css/style.css">
-
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  
 </head>
 <body>
 
@@ -55,8 +54,7 @@
 
     <nav id="navigation" class="navbar navbar-expand-lg">
         <a class="navbar-brand" href="#">Tristan de Mezieres</a>
-
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
 
@@ -92,15 +90,14 @@
           </div>
           <div class="col-md-7">
             <h4>Hey, I'm Tristan de Mezieres</h4>
-
-            <p>I'm an aspiring Web Developer from Brisbane, Australia. I currently work as an Application Support Analyst at TechnologyOne. In my spare time I focus on writing accessable HTML, using modern CSS practices and writing clean JavaScript. When wirting JavaScript code, I mostly use React, but can adapt to whatever tools are required.</p>
-            <p>I enjoy web development because it allows me to be creative, solve real problems and continuously learn and grow.</p>
+            <br>
+            <p>I'm an aspiring Web Developer from Brisbane, Australia. I currently work as an Application Support Analyst at TechnologyOne. Outside of work I focus on writing accessable HTML, using modern CSS practices and writing clean JavaScript. When wirting JavaScript code, I mostly use React, but can adapt to whatever tools are required.</p>
+            <p>I enjoy web development because it allows me to be creative, solve real problems and continuously learn and grow. I'm also interested in applying security principles and techniques to websites, web applications and web services.</p>
           </div>
         </div>
     </div>
   </div>
 
-  <!-- Text needs to be wrapped -->
 
 <!-- Technical Skills -->
 
