--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
       <div class="slides-container">
           <img src="img/slide1.jpg" alt="">
-          <img src="img/slide2.jpeg" alt="">
+          <img src="img/slide4.jpg" alt="">
           <img src="img/slide3.jpeg" alt="">
       </div>
 
@@ -250,14 +250,14 @@
       <div class="itemsContainer">
         <ul class="items">
 
-          <li onclick="" class="websites col.xs-6 col-sm-4 col-md-3 col-lg-3">
+          <li onclick="" class="apps col.xs-6 col-sm-4 col-md-3 col-lg-3">
             <div class="item">
-              <img src="img/portfolio/thumbnails/websiteSquare.jpg"></img>
+              <img src="img/portfolio/thumbnails/colourgameSquare.jpg"></img>
               <div class="icons">
-                <a href="img/portfolio/website.jpg" title="View image" class="openButton" data-fancybox data-caption="This is a purple website">
+                <a href="img/portfolio/colourgame.JPG" title="View image" class="openButton" data-fancybox data-caption="Guess the colour tile that matches the RGB number">
                     <i class="fa fa-search"></i>
                 </a>
-                <a href="https://github.com/tristanhtml" target="_blank" class="projectLink">
+                <a href="https://github.com/tristanhtml/The-RGB-Colour-Guessing-Game.git" target="_blank" class="projectLink">
                     <i class="fa fa-link"></i>
                 </a>
               </div>
@@ -310,7 +310,7 @@
             </div>
           </li>
           
-          <li onclick="" class="apps col.xs-6 col-sm-4 col-md-3 col-lg-3">
+          <li onclick="" class="websites col.xs-6 col-sm-4 col-md-3 col-lg-3">
             <div class="item">
               <img src="img/portfolio/thumbnails/websiteSquare.jpg"></img>
               <div class="icons">
