about paragraph change

--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
           <div class="col-md-7">
             <h4>Hey there, I'm Tristan de Mezieres</h4>
             <br>
-            <p>I'm an aspiring Web Developer from Brisbane, Australia. I currently work as an Application Support Analyst at TechnologyOne. Outside of work I focus on writing accessable HTML, using modern CSS practices and writing clean JavaScript. When wirting JavaScript code, I mostly use React, but can adapt to whatever tools are required.</p>
-            <p>I enjoy web development because it allows me to be creative, solve real problems and continuously learn and grow. I'm also interested in applying security principles and techniques to websites, web applications and web services.</p>
+            <p>I'm an aspiring Web Developer from Brisbane, Australia. I currently work as an Support Analyst at TechnologyOne. Outside of work I focus on writing accessable HTML, using modern CSS practices and writing clean JavaScript. When writing JavaScript code, I mostly use React, but can adapt to whatever tools are required.</p>
+            <p>I enjoy web development because it allows me to be creative, solve real problems and continuously learn and grow. I'm also interested in applying security principles and techniques to websites.</p>
           </div>
         </div>
     </div>
